--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
@@ -14,4 +15,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    .app{
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </html>
