--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <!-- built files will be auto injected -->
   </body>
   <style>
-    .app{
+    .body{
       margin: 0;
       padding: 0;
     }
