--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <script src='//recaptcha.net/recaptcha/api.js'></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
@@ -16,9 +17,5 @@
     <!-- built files will be auto injected -->
   </body>
   <style>
-    #app{
-      margin: 0;
-      padding: 0;
-    }
   </style>
 </html>
